--- a/scripts/about.html
+++ b/scripts/about.html
@@ -14,9 +14,9 @@
     </header> 
     <nav> 
         <ul> 
-            <li><a href="index.html">Рецепты</a></li> 
-            <li><a href="about.html">Об авторе</a></li> 
-            <li><a href="contact.html">Контакты</a></li> 
+            <li><a href="../index.html">Рецепты</a></li> 
+            <li><a href="./about.html">Об авторе</a></li> 
+            <li><a href="./contact.html">Контакты</a></li> 
         </ul> 
     </nav> 
     <h1>Обо мне:</h3>
