--- a/scripts/about.html
+++ b/scripts/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"> 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <title>TvoyiRecepti</title> 
-    <link rel="stylesheet" href="/about/about.css"> 
+    <link rel="stylesheet" href="../styles/about.css"> 
 </head> 
 <body> 
     <header> 
